--- a/css/style.css
+++ b/css/style.css
@@ -91,19 +91,19 @@ h6 {
 /* --------------------------------------------------------------------------------------------------------------------- */
 body {
   font-family: "Mulish", sans-serif;
+  white-space: nowrap;
 }
 /* Block with gradient backgraund */
 .top-block {
-  background: linear-gradient(
-    180deg,
-    rgba(7, 115, 250, 0.7) 0%,
-    #0773fa 80.03%
-  );
+  background: linear-gradient(180deg, rgba(7, 115, 250, 0.7) 0%, #0773fa 80.03%)
+    0 0 no-repeat;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  height: 914px;
 }
 .head_items {
   padding: 20px 0 0 155px;
   font-family: "DM Sans", sans-serif;
-  width: 1440px;
+  white-space: nowrap;
 }
 .head_item1 {
   margin: 20px 0 0 125px;
@@ -138,20 +138,20 @@ body {
 
 /* Why verso */
 h1 {
+  display: inline-block;
+  width: 790px;
   margin: 170px 0 0 325px;
-  padding: 0 0 0 50px;
-  margin-top: 170px;
   font-style: normal;
   font-weight: 900;
   font-size: 51px;
   line-height: 80px;
-  width: 790px;
   text-align: center;
   letter-spacing: -2.4px;
   color: #ffffff;
 }
 /* Verso is available */
 .verso_link {
+  white-space: normal;
   width: 690px;
   margin: 20px 0 0 375px;
   font-style: normal;
@@ -172,52 +172,103 @@ h1 {
   color: #033573;
 }
 
-.listing {
-  margin-top: 40px;
-  margin-left: 535px;
+.listing span:nth-child(1) {
+  display: inline-block;
+  width: 179px;
+  margin: 40px 0 0 490px;
+  /* border: 1px solid white; */
   font-style: normal;
   font-weight: 600;
   font-size: 16px;
   line-height: 28px;
+  text-align: center;
   letter-spacing: -0.2px;
-  display: flexbox;
-  flex-direction: column;
+  color: #ffffff;
 }
+.listing span:nth-child(2) {
+  display: inline-block;
+  width: 179px;
+  margin: 40px 0 0 82px;
+  /* border: 1px solid white; */
+  font-style: normal;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 28px;
+  text-align: center;
+  letter-spacing: -0.2px;
+  color: #ffffff;
+}
+
 .block_painting1 {
-  margin: 14px 0 0 495px;
+  white-space: nowrap;
+  display: inline-block;
+  margin: 14px 0 0 490px;
   padding: 0;
   width: 179px;
   height: 71px;
-  border: 1px solid white;
+  /* border: 1px solid white; */
   border-radius: 6px;
   background: white url(../img/image\ 21.svg) center -15px/110% auto no-repeat;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
 .block_painting2 {
-  margin: 14px 0 0 495px;
-  padding: 0;
+  white-space: nowrap;
+  display: inline-block;
+  margin: 14px 0 0 82px;
   width: 179px;
   height: 71px;
-  border: 1px solid white;
+  /* border: 1px solid white; */
   border-radius: 6px;
   background: rgba(255, 95, 0, 1) url(../img/image\ 24.svg) center/70% auto
     no-repeat;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
 .block_painting3 {
-  margin: 14px 0 0 495px;
-  padding: 0;
+  white-space: nowrap;
+  display: inline-block;
+  margin: 18px 0 0 754px;
   width: 179px;
   height: 71px;
-  border: 1px solid white;
+  /* border: 1px solid white; */
   border-radius: 6px;
   background: rgba(255, 255, 255, 1) url(../img/image\ 16.svg) center no-repeat;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
 .block_painting4 {
-  margin: 14px 0 0 495px;
+  white-space: nowrap;
+  display: inline-block;
+  margin: 18px 0 0 754px;
   padding: 0;
   width: 179px;
   height: 71px;
-  border: 1px solid white;
+  /* border: 1px solid white; */
   border-radius: 6px;
   background: rgba(255, 255, 255, 1) url(../img/image\ 22.svg) center/132px 32px
     no-repeat;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+}
+
+.ref_guide {
+  margin: 141px 0 0 402px;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 28px;
+  letter-spacing: -0.4px;
+  color: #ffffff;
+}
+.ref_guide span {
+  font-style: normal;
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 28px;
+  letter-spacing: -0.4px;
+  color: #033573;
+}
+.ref_guide a {
+  font-style: normal;
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 28px;
+  color: #033573;
 }
