--- a/css/style.css
+++ b/css/style.css
@@ -278,6 +278,38 @@ h1 {
   line-height: 28px;
   color: #033573;
 }
+.box_yellow {
+  width: 44px;
+  height: 49px;
+  position: absolute;
+  left: 1251px;
+  top: 207px;
+  filter: blur(4px) drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+}
+.box_yellow img:nth-child(1) {
+  width: 44px;
+  height: 20px;
+  position: relative;
+  top: 0;
+  left: 0;
+  z-index: 1;
+}
+.box_yellow img:nth-child(2) {
+  width: 22px;
+  height: 39px;
+  position: relative;
+  z-index: 1;
+  top: 10.3px;
+  left: -47.5px;
+}
+.box_yellow img:nth-child(3) {
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+  width: 22px;
+  height: 39px;
+  position: relative;
+  top: 10.3px;
+  left: -51.5px;
+}
 
 .blue_block {
   margin-top: 43px;
