--- a/css/style.css
+++ b/css/style.css
@@ -311,6 +311,78 @@ h1 {
   left: -51.5px;
 }
 
+.box_gray {
+  width: 58px;
+  height: 64px;
+  position: absolute;
+  left: 1193px;
+  top: 301px;
+  filter: blur(4px) drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+}
+.box_gray img:nth-child(1) {
+  height: 35px;
+  position: relative;
+  top: 0px;
+  left: 3px;
+  z-index: 2;
+}
+.box_gray img:nth-child(2) {
+  width: 30px;
+  height: 50px;
+  position: relative;
+  top: 14px;
+  left: -34px;
+  z-index: 1;
+}
+.box_gray img:nth-child(3) {
+  width: 28px;
+  height: 50px;
+  position: relative;
+  top: 14px;
+  left: -95.5px;
+  z-index: 1;
+}
+.box_purle {
+  width: 44px;
+  height: 49px;
+  position: absolute;
+  left: 240px;
+  top: 639px;
+  filter: blur(4px) drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+}
+.box_purle img:nth-child(1) {
+  height: 20px;
+  position: relative;
+  top: 0px;
+  left: 0px;
+  z-index: 2;
+}
+.box_purle img:nth-child(2) {
+  width: 22px;
+  height: 39px;
+  position: relative;
+  top: 10px;
+  left: -26px;
+  z-index: 2;
+}
+.box_purle img:nth-child(3) {
+  width: 22px;
+  height: 39px;
+  position: relative;
+  top: 10px;
+  left: -74px;
+  z-index: 2;
+}
+
+.box_green {
+  width: 81px;
+  height: 73px;
+  position: absolute;
+  left: 154px;
+  top: 719px;
+  filter: blur(4px) drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+}
+
 .blue_block {
   margin-top: 43px;
   height: 500px;
