--- a/css/style.css
+++ b/css/style.css
@@ -99,13 +99,9 @@ body {
     rgba(7, 115, 250, 0.71) 0%,
     #0773fa 80.03%
   );
-  height: 957px;
+  height: 914px;
 }
 
-.top-block {
-  height: 914px;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-}
 .head_items {
   padding: 20px 0 0 155px;
   font-family: "DM Sans", sans-serif;
@@ -380,18 +376,18 @@ h1 {
   position: absolute;
   left: 154px;
   top: 719px;
-  filter: blur(4px) drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
 
 .blue_block {
-  margin-top: 43px;
-  height: 500px;
+  height: 698px;
+  margin: 0;
   background: #0773fa;
 }
 
 h2 {
-  margin: 0px 0 0 421px;
-  padding: 10px;
+  display: inline-block;
+  margin: 47px 0 0 421px;
   width: 598px;
   height: 80px;
   font-style: normal;
@@ -403,13 +399,108 @@ h2 {
   color: #ffffff;
 }
 
-.blue_block img {
-  height: 333px;
+.cart1,
+.cart2 {
+  display: inline-block;
+  width: 380px;
+  height: 470px;
+  border: 1px solid red;
+}
+.cart1 {
+  margin: 31px 0 0 265px;
+}
+.cart2 {
+  margin: 31px 0 0 142px;
+}
+
+.screen1,
+.screen2 {
   width: 200px;
+  height: 333px;
+  margin: 0 auto;
+
+  filter: drop-shadow(0px 100px 80px rgba(0, 0, 0, 0.07))
+    drop-shadow(0px 41.7776px 33.4221px rgba(0, 0, 0, 0.0503198))
+    drop-shadow(0px 22.3363px 17.869px rgba(0, 0, 0, 0.0417275))
+    drop-shadow(0px 12.5216px 10.0172px rgba(0, 0, 0, 0.035))
+    drop-shadow(0px 6.6501px 5.32008px rgba(0, 0, 0, 0.0282725))
+    drop-shadow(0px 2.76726px 2.21381px rgba(0, 0, 0, 0.0196802));
+  border-radius: 10px;
 }
-.screen-1 {
-  margin: 31px 0 0 351px;
+.screen1 {
+  background: url(../img/Screen1.svg) -80px 0px no-repeat;
 }
-.screen-2 {
-  margin: 31px 0 0 322px;
+.screen2 {
+  background: url(../img/Screen2.svg) -80px 0px no-repeat;
 }
+
+.number1,
+.number2 {
+  display: inline-block;
+  height: 55px;
+  width: 55px;
+  border: 1px solid white;
+  border-radius: 50%;
+  padding: 9px 17px;
+  background-color: white;
+  color: #0d6bd8;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  font-style: normal;
+  font-weight: bold;
+  font-size: 28px;
+  line-height: 126%;
+  position: relative;
+  top: -80px;
+  left: 10px;
+}
+
+.text_1,
+.text_2 {
+  display: inline-block;
+  white-space: normal;
+  padding: 0 11px 11px 0;
+  width: 293px;
+  height: 112px;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 28px;
+  letter-spacing: -0.2px;
+  color: rgba(255, 255, 255, 0.83);
+  position: relative;
+  top: 10px;
+  left: 27px;
+}
+.cart-link {
+  font-family: DM Sans;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 28px;
+  letter-spacing: -0.2px;
+  color: #033573;
+}
+
+.box_green_2 {
+  position: absolute;
+  left: 1256px;
+  top: 1337px;
+  filter: drop-shadow(-5px 20px 24px rgba(0, 0, 0, 0.15));
+}
+.box_pink {
+  position: absolute;
+  left: 1210px;
+  top: 1286px;
+}
+
+/* .line1 {
+  border: 1px solid rgba(236, 236, 236, 0.3);
+  transform: matrix(0.92, -0.39, 0.39, 0.92, 0, 0);
+  position: absolute;
+  left: -141px;
+  top: 762px;
+  width: 200%;
+
+  z-index: 0;
+  filter: drop-shadow(0px 2px 2px rgba(0, 0, 0, 1));
+} */
