--- a/css/style.css
+++ b/css/style.css
@@ -93,13 +93,17 @@ body {
   font-family: "Mulish", sans-serif;
   white-space: nowrap;
   width: 1440px;
+  margin: 0 auto;
+  position: relative;
+  background: url("../img/Line\ 14.svg");
 }
 .gradient-background {
   background: linear-gradient(
-    180deg,
-    rgba(7, 115, 250, 0.71) 0%,
-    #0773fa 80.03%
-  );
+      180deg,
+      rgba(7, 115, 250, 0.71) 0%,
+      #0773fa 80.03%
+    ),
+    url("../img/Line\ 14.svg") 0 0 no-repeat;
   height: 914px;
 }
 
@@ -670,6 +674,10 @@ table tr:last-child {
   padding-top: 0px;
   /* padding: 20px 0 0 0; */
 }
+.services a,
+.about a {
+  color: #fff;
+}
 
 .about {
   margin-left: 140px;
@@ -706,15 +714,3 @@ table tr:last-child {
 .back-to-top img {
   margin: 37px 0px 22px 1362px;
 }
-
-/* .line1 {
-  border: 1px solid rgba(236, 236, 236, 0.3);
-  transform: matrix(0.92, -0.39, 0.39, 0.92, 0, 0);
-  position: absolute;
-  left: -141px;
-  top: 762px;
-  width: 200%;
-
-  z-index: 0;
-  filter: drop-shadow(0px 2px 2px rgba(0, 0, 0, 1));
-} */
